# ParkSpaceSharing

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  run.sh
.cache/clangd/index/: AuthHandler.cpp.6D49ACB27EB6DBA7.idx  AuthHandler.hpp.9B7B86E4443D3F17.idx  AuthInterceptor.cpp.8BD08F607B5CE994.idx  AuthInterceptor.hpp.E671296E52858F0C.idx  JWT.cpp.0612B74710AFDACD.idx  JWT.hpp.66E2E356BEC15A32.idx  app_component.hh.0E3FE217E3AA3D33.idx  auth_controller.hh.72E9499C0A3AACFC.idx  auth_dto.hh.F8FD3BDFD157A5C4.idx  auth_handler.cpp.7503832D120D5EE6.idx  auth_handler.hpp.C8CA1FC1C12206A3.idx  auth_service.cc.E6F03E4B8A48EEB3.idx  auth_service.hh.D8800826756D9F59.idx  database_component.hh.7DCEBFF23C820793.idx  error_handler.cc.D7F5F87B9BE32D6A.idx  error_handler.hh.E223EB15118818C3.idx  main.cc.F9F632EE3DB0E2F1.idx  offer_controller.hh.0A303C9F85ED300B.idx  offer_dto.hh.A041D8C67A497022.idx  offer_service.cc.2479D39D3F3A69CD.idx  offer_service.hh.9D9013C8940CF032.idx  page_dto.hh.2BC051A159BB0B22.idx  parkingSpace_controller.hh.B03F651126B711BC.idx  parkingSpace_dto.hh.C3F6EFC2AF20C442.idx  parkingSpace_service.hh.EFA7FE3E29189227.idx  pss_db.hh.D0B0E94D0764C10B.idx  signIn_dto.hh.81FCC78F5313C8C3.idx  signUp_dto.hh.EAFB81E6561DB824.idx  status_dto.hh.5F0C8030DCEC9DAA.idx  swagger_component.hh.83C5636266998BAC.idx  user_controller.hh.B9DE8A4FB0FE14BD.idx  (+3 more)
.github/: filters.yaml
.github/workflows/: ci.yml  static_analysis.yml
app/src/: CMakeLists.txt  main.cpp
cmake/: add_ut.cmake  conan.cmake  ipo.cmake
server/: CMakeLists.txt
server/lib/: Config.cc  Config.hh  ErrorHandler.cc  ErrorHandler.hh  PasswordUtils.cc  PasswordUtils.hh  TokenUtils.cc  Validator.cc  Validator.hh  utils.cc  utils.hh
server/lib/component/: AppComponent.hh  DatabaseComponent.hh
server/lib/controller/: AuthController.hh  OfferController.hh  PlaceController.hh  UserController.hh
server/lib/database/: MainDatabase.cc  MainDatabase.hh
server/lib/dto/: AuthDto.hh  OfferDto.hh  UserDto.hh
server/lib/service/: AuthService.cc  AuthService.hh  OfferService.cc  PlaceService.cc  PlaceService.hh  UserService.cc  UserService.hh
server/migrations/: 001_init.sql  002_fts_init.sql  002_sample_data.sql  003_sample_data.sql
server/src/: AuthHandler.cc  AuthHandler.hh  CMakeLists.txt  Config.cc  Config.hh  EmailValidation.cc  EmailValidation.hh  ErrorHandler.cc  ErrorHandler.hh  JWT.cc  JWT.hh  RegexValidation.cc  RegexValidation.hh  Tel_numValidation.cc  Tel_numValidation.hh  TokenPayload.hh  TokenUtils.cc  TokenUtils.hh  Validator.cc  Validator.hh  config.cc  config.hh  error_handler.cc  error_handler.hh  main.cc  server.cpp
server/src/auth/: AutchHandler.cpp  AuthHandler.cc  AuthHandler.cpp  AuthHandler.hh  AuthHandler.hpp  JWT.cc  JWT.cpp  JWT.hh  JWT.hpp  auth_handler.cpp  auth_handler.hpp
server/src/component/: AppComponent.hh  DatabaseComponent.hh  SwaggerComponent.hh  app.hh  app_component.hh  database.hh  database_component.hh  swagger.hh  swagger_component.hh
server/src/controller/: AuthController.hh  OfferController.hh  PlaceController.hh  TestController.hh  UserController.hh  auth_controller.hh  offer_controller.hh  parkingSpace_controller.hh  parking_space_sharing.hh  user_controller.hh
server/src/core/: CMakeLists.txt  core.cpp  core.hpp  database.hh
server/src/database/: CMakeLists.txt  MainDatabase.cc  MainDatabase.hh  parking_space_sharing.hh  pss_db.hh
server/src/database/config/: CMakeLists.txt
server/src/database/include/database/: context.hh  descriptor.hh
server/src/database/model/: UserModel.hh
server/src/database/src/: context.cc
server/src/dto/: AuthDto.hh  OfferDto.hh  PageDto.hh  PlaceDto.hh  SignInDto.hh  SignUpDto.hh  StatusDto.hh  UserDto.hh  auth_dto.hh  offer_dto.hh  page.hh  page_dto.hh  parkingSpace_dto.hh  parking_space.hh  result_dto.hh  signIn_dto.hh  signUp_dto.hh  status.hh  status_dto.hh  user.hh  user_dto.hh
server/src/interceptor/: AuthInterceptor.cpp  AuthInterceptor.hpp
server/src/proxy/: CMakeLists.txt  proxy.cpp  proxy.pb.cc  proxy.pb.h  proxy.proto
server/src/service/: AuthService.cc  AuthService.hh  OfferService.cc  OfferService.hh  PlaceService.cc  PlaceService.hh  UserService.cc  UserService.hh  auth_service.cc  auth_service.hh  offer_service.cc  offer_service.hh  parkingSpace_service.cc  parkingSpace_service.hh  parking_space_sharing.cc  parking_space_sharing.hh  user_service.cc  user_service.hh
server/tests/: ApiClient.hh  Assert.cc  Assert.hh  AuthController.cc  AuthController.hh  Context.hh  FullTest.cc  FullTest.hh  OfferController.cc  OfferController.hh  PlaceController.cc  PlaceController.hh  main.cc
src/: CMakeLists.txt  main.cpp
src/Proxy/: CMakeList.txt  proxy.cpp  proxy.hpp
src/core/: CMakeLists.txt  core.cpp  core.hpp
src/database/: CMakeLists.txt
src/database/config/: CMakeLists.txt  config.sql
src/database/include/database/: context.hh  example.hh  exceptions.hh  insert_descriptor.hh  statement.hh
src/database/include/database/detail/: prepare_insert.hh
src/database/src/: context.cc  example.cc  statement.cc
src/example/: CMakeLists.txt  Example.cpp  Example.hpp
src/gui/resources/: Login.qml  Register.qml  main.qml  qml.qrc
src/guiQT/: CMakeLists.txt  qt.cpp  qt.hpp
src/proxy/: CMakeLists.txt  proxy.cpp  proxy.hpp
src/proxy/include/proxy/: test.hh
src/proxy/source/: file1.cpp  proxy.cpp  proxy.hpp
src/proxy/src/: main.cc  test.cc
test/: CMakeLists.txt
test/Proxy/: CMakeLists.txt  proxytest.cpp
test/core/: CMakeLists.txt  tests.cpp
test/database/: CMakeLists.txt
test/database/databases/: context.sqlite
test/database/src/: context.cc  example.cc
test/example/: CMakeLists.txt  example.cpp
test/guiQT/: CMakeLists.txt  QTTest.cpp
test/proxy/: CMakeLists.txt  proxytest.cpp
test/proxy/src/: test.cc
web/: .env  oas-3.0.0.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web.old/: README.md
web/src/: package-lock.json  package.json  setup.sh  tailwind.config.js
(+32 files in other folders)
